--- a/PMHT/static/css/juego1.css
+++ b/PMHT/static/css/juego1.css
@@ -8,8 +8,7 @@
     --tokens: #f3ea60;
     --tockenShadow: #b96453;
     --tokenText: #754d26;
-    --background:linear-gradient(90deg, #2ecc71, #3498db);
-    ;
+    --background: #da7ff2;
     --btnBackground: #3edaf1;
     --btnShadow: #0885da;
     --btnText: #135fb5;
