--- a/PMHT/static/css/daily_test.css
+++ b/PMHT/static/css/daily_test.css
@@ -146,15 +146,33 @@ p {
 }
 
 .question {
+    width: 980px;
     background: linear-gradient(90deg, #3498db, #2ecc71); /* Color de fondo para cada pregunta */
-    border-radius: 10px; /* Bordes redondeados */
-    padding: 20px;
-    margin-bottom: 20px;
+    border-radius: 40px; /* Bordes redondeados */
+    box-shadow: 2PX 3px 10px rgba(0,0,0,0.2);
+}
+.question h3 {
+    color: #FFFFFF;
+    padding: 30PX 0;
+    text-align: center;
+    background: #062C30;
+    font-size: 30px;
+    font-weight:100;
+    border-radius: 30px 30px 0 0;
 }
 
-.question input[type="radio"] {
-    margin-right: 5px; /* Espacio entre el botón de radio y el texto de la respuesta */
+.question .input{
+    background: #ffffff;
+    display: flex;
+    align-items: center;
+    border: 1px solid lightgray;
+    border-radius: 50px;
+    margin: 10px 50px;
+    padding-left: 20px;
+    transition: all 0.3s ease;
 }
+
+
 .question p {
     padding: 10px 35px;
     color: #000000;
@@ -167,6 +185,52 @@ p {
     color: #000000;
     margin-bottom: 5px;
 }
+.box-label {
+    display: flex;
+    align-items: center;
+    margin: 20px 0;
+    height: 53px;
+    width: 80%;
+    padding-left:100px;
+  }
+  
+  .box-label input[type="radio"] {
+    display: none;
+  }
+  
+  .box-label .box-option {
+    background: #ffffff;
+    display: flex;
+    align-items: center;
+    border: 1px solid lightgray;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin-left: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .box-label:hover .box-option {
+    background: #f2f2f2; /* Cambia el color de fondo al pasar el ratón sobre la etiqueta */
+  }
+  
+  .box-label .box-option .dot {
+    height: 20px;
+    width: 20px;
+    background: #d9d9d9;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .box-label input[type="radio"]:checked + .box-option .dot {
+    background: #05595B;
+  }
+  
+  .box-label .box-option .text {
+    color: #333;
+    font-size: 18px;
+    font-weight: 400;
+  }
 
 button {
     display: block;
