--- a/PMHT/templates/inicio.html
+++ b/PMHT/templates/inicio.html
@@ -9,12 +9,18 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/inicio.css' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 </head>
 
 <body>
     <header class="header">
         <div class="menu container">
-            <a href="{% url 'inicio' %}" class="logo">Mental Health Tests</a>
+            <a href="{% url 'inicio' %}" class="logo">Mental Health </a>
 
             <input type="checkbox" id="menu" />
             <label for="menu">
@@ -25,8 +31,8 @@
 
         </div>
         <div class="header-content container">
-            <h1>Mental Health Tests</h1>
-            <p>"Mental Health Tests" es una plataforma en línea que tiene como objetivo brindar apoyo
+            <h1>Mental Health </h1>
+            <p>"Mental Health " es una plataforma en línea que tiene como objetivo brindar apoyo
                 y recursos relacionados con la salud mental. Su enfoque principal es proporcionar
                 una variedad de pruebas y evaluaciones de salud mental diseñadas para ayudar a las personas
                 a comprender y evaluar su bienestar emocional y psicológico.
@@ -34,7 +40,7 @@
         </div>
     </header>
 
-    <section class="coffee">
+    <section class="coffee">   
         <img class="coffee-img" src="images/" alt="">
         <div class="coffee-content container">
             <h2>Planteamiento del Problema</h2>
@@ -51,32 +57,6 @@
                 a las personas a comprender y abordar sus desafíos emocionales.
 
             </p>
-            <div class="coffee-group">
-                <div class="coffee-1">
-                    <img src="../static/images/c1.png" alt="">
-                    <h3>Acceso Limitado a Evaluaciones de Salud Mental:</h3>
-                    <p>
-                        Muchas personas no tienen acceso a pruebas psicológicas de calidad
-                        que les permitan evaluar su salud mental y comprender mejor su bienestar
-                        emocional.
-                    </p>
-                </div>
-                <div class="coffee-1">
-                    <img src="../static/images/c3.png" alt="">
-                    <h3>Apoyo al Bienestar Emocional:</h3>
-                    <p>
-                        Ofrecer pruebas psicológicas en línea es fundamental para apoyar el bienestar emocional
-                        y ayudar a las personas a comprender y abordar sus desafíos emocionales de manera informada.
-                    </p>
-                </div>
-
-            </div>
-            <p class="txt-p">
-                El proyecto "Mental Health Tests" se propone abordar estos problemas
-                al proporcionar una plataforma en línea que ofrezca una variedad de pruebas
-                psicológicas de calidad. El objetivo es brindar a las personas un acceso fácil
-                y confiable para evaluar su salud mental y tomar decisiones informadas sobre su bienestar emocional.
-            </p>
         </div>
     </section>
 
@@ -84,63 +64,59 @@
 
 
 
-        <main class="services">
-
-
-
-            <div class="container">
-                <div class="row">
-                    <!-- Sección 1 -->
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src={% static 'images/motivacion.jpg' %} class="card-img-top" alt="Imagen 1">
-                            <div class="card-body">
-                                <h5 class="card-title">rompecabezas de motivacion</h5>
-                                <p class="card-text" style="color: black;">Resuelve un desafiante rompecabezas de números en una sola pantalla. Intenta completarlo con rapidez y precisión.</p>
-                                <div style="position: relative;">
-                                    <img src={% static 'images/motivacion.jpg' %} alt="Imagen Invisible"
-                                        style="opacity: 0.5; width: 100%;">
-                                    <a href="{% url 'juego1' %}" class="btn btn-primary"
-                                        style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
-                                </div>
+        <div class="container">
+            <div class="row">
+                <!-- Sección 1 -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src={% static 'images/motivacion.jpg' %} class="card-img-top" alt="Imagen 1">
+                        <div class="card-body">
+                            <h5 class="card-title">rompecabezas de motivacion</h5>
+                            <p class="card-text" style="color: black;">Resuelve un desafiante rompecabezas de números en una sola pantalla. Intenta completarlo con rapidez y precisión.</p>
+                            <div style="position: relative;">
+                                <img src={% static 'images/motivacion.jpg' %} alt="Imagen Invisible"
+                                    style="opacity: 0.5; width: 100%;">
+                                <a href="{% url 'juego1' %}" class="btn btn-primary"
+                                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
                             </div>
                         </div>
                     </div>
-    
-                    <!-- Sección 2 -->
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src={% static 'images/mentalidad.jpg' %} class="card-img-top" alt="Imagen 2">
-                            <div class="card-body">
-                                <h5 class="card-title">juego de preguntas</h5>
-                                <p class="card-text" style="color: black;">Responde preguntas relacionadas con una imagen que se muestra por un corto periodo. Pon a prueba tu atención y capacidad de respuesta rápida.</p>
-                                <div style="position: relative;">
-                                    <img src={% static 'images/mentalidad.jpg' %} alt="Imagen Invisible"
-                                        style="opacity: 0.5; width: 100%;">
-                                    <a href="{% url 'juego2' %}" class="btn btn-primary"
-                                        style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
-                                </div>
+                </div>
+
+                <!-- Sección 2 -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src={% static 'images/mentalidad.jpg' %} class="card-img-top" alt="Imagen 2">
+                        <div class="card-body">
+                            <h5 class="card-title">juego de preguntas</h5>
+                            <p class="card-text" style="color: black;">Responde preguntas relacionadas con una imagen que se muestra por un corto periodo. Pon a prueba tu atención y capacidad de respuesta rápida.</p>
+                            <div style="position: relative;">
+                                <img src={% static 'images/mentalidad.jpg' %} alt="Imagen Invisible"
+                                    style="opacity: 0.5; width: 100%;">
+                                <a href="{% url 'juego2' %}" class="btn btn-primary"
+                                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
                             </div>
                         </div>
                     </div>
-    
-                    <!-- Sección 3 -->
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img src="{% static 'images/respiracion.jpg' %}" class="card-img-top" alt="Imagen 3">
-                            <div class="card-body">
-                                <h5 class="card-title">Ejercicio de respiracion</h5>
-                                <p class="card-text" style="color: black;">Sigue la animación de una bola subiendo y bajando para practicar una respiración calmada. Ideal para reducir el estrés y relajarte.</p>
-                                <div style="position: relative;">
-                                    <img src="{% static 'images/respiracion.jpg' %}" alt="Imagen Invisible" style="opacity: 0.5; width: 100%;">
-                                    <a href="{% url 'juego3' %}" class="btn btn-primary"
-                                        style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
-                                </div>
+                </div>
+
+                <!-- Sección 3 -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="{% static 'images/respiracion.jpg' %}" class="card-img-top" alt="Imagen 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Título del juego 3</h5>
+                            <p class="card-text" style="color: black;">Sigue la animación de una bola subiendo y bajando para practicar una respiración calmada. Ideal para reducir el estrés y relajarte.</p>
+                            <div style="position: relative;">
+                                <img src="{% static 'images/respiracion.jpg' %}" alt="Imagen Invisible" style="opacity: 0.5; width: 100%;">
+                                <a href="{% url 'juego3' %}" class="btn btn-primary"
+                                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
         <!-- Agregar la referencia a Bootstrap (asegúrate de que Bootstrap esté disponible en tu proyecto) -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
