--- a/PMHT/templates/mostrar_resultado.html
+++ b/PMHT/templates/mostrar_resultado.html
@@ -1,11 +1,141 @@
-{% extends 'base.html' %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tu Título</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/mostrar_resultado.css' %}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-{% block content %}
-<section class="coffee">
-    <div class="coffee-content container">
-        <h2>Resultado</h2>
-        <h3>{{ resultado.titulo }}</h4>
-        {{ resultado.descripcion }}
-    </div>
-</section>
-{% endblock %}
+</head>
+<body>
+    <header class="header">
+        <div class="menu container">
+            <a href="{% url 'inicio' %}" class="logo">Mental Health Tests</a>
+
+            <input type="checkbox" id="menu"/>
+            <label for="menu">
+                <img src="../static/images/menu.png" class="menu-icono" alt="">
+            </label>
+
+            {% include 'navbar.html' %}
+
+        </div>
+        <div class="header-content container">
+            <h1>Mental Health </h1>
+            </p>
+        </div>
+    </header>
+
+
+        <div class="coffee-content container">
+            <div class="question">
+                <h1>{{ resultado.titulo }}</h1><br><br>
+                <h2>Resultado:</h2><br>
+                <h3>{{ ultimo_resultado.total_puntos }}</h3>
+                <p>{{ resultado.descripcion }}</p><br><br>
+            </div>
+        </div>
+    </section>
+    
+
+    <main class="services">
+
+        <i class="bi bi-chevron-left m-4"><a href="{% url 'inicio' %}"></a></i>
+
+        <div class="container">
+            <div class="row">
+                <!-- Sección 1 -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src={% static 'images/motivacion.jpg' %} class="card-img-top" alt="Imagen 1">
+                        <div class="card-body">
+                            <h5 class="card-title">rompecabezas de motivacion</h5>
+                            <p class="card-text" style="color: black;"></p>
+                            <div style="position: relative;">
+                                <img src={% static 'images/motivacion.jpg' %} alt="Imagen Invisible"
+                                    style="opacity: 0.5; width: 100%;">
+                                <a href="{% url 'juego1' %}" class="btn btn-primary"
+                                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sección 2 -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src={% static 'images/mentalidad.jpg' %} class="card-img-top" alt="Imagen 2">
+                        <div class="card-body">
+                            <h5 class="card-title">juego de preguntas</h5>
+                            <p class="card-text" style="color: black;"></p>
+                            <div style="position: relative;">
+                                <img src={% static 'images/mentalidad.jpg' %} alt="Imagen Invisible"
+                                    style="opacity: 0.5; width: 100%;">
+                                <a href="{% url 'juego2' %}" class="btn btn-primary"
+                                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sección 3 -->
+                <div class="col-md-4">
+                    <div class="card">
+                        <img src="{% static 'images/respiracion.jpg' %}" class="card-img-top" alt="Imagen 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Título del juego 3</h5>
+                            <p class="card-text" style="color: black;"></p>
+                            <div style="position: relative;">
+                                <img src="{% static 'images/respiracion.jpg' %}" alt="Imagen Invisible" style="opacity: 0.5; width: 100%;">
+                                <a href="{% url 'juego3' %}" class="btn btn-primary"
+                                    style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">Entrar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Agregar la referencia a Bootstrap (asegúrate de que Bootstrap esté disponible en tu proyecto) -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    </main>
+
+    <footer class="footer">
+        <div class="footer-content container">
+            <div class="link">
+                <h3>Correo</h3>
+                <ul>
+                    <li><a href="#">Alejolop507@gmail.com</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>facebook</h3>
+                <ul>
+                    <li><a href="#">Manuel Lopez Rojas</a></li>
+
+                </ul>
+            </div>
+            <div class="link">
+                <h3>Discord</h3>
+                <ul>
+                    <li><a href="#">gatozero.</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h3>WhatsApp</h3>
+                <ul>
+                    <li><a href="#">322 403 08 71</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+</html>
